Project NexTalk {
  database_type: 'PostgreSQL'
  Note: '''
    Бизнес-БД `nextalk` с двумя схемами:
    - guild     - Guild Service (5 таблиц, hard-FK + cascade)
    - messaging - Messaging Service (3 таблицы, без hard-FK)
    Zitadel использует отдельную БД `zitadel`, поэтому связи на sub - без FK.
  '''
}

// ─── Schema: guild ────────────────────────────────────────────────────────

Table guild.guilds {
  id         uuid         [pk, default: `uuidv7()`]
  name       varchar(32)  [not null, note: 'мин. 2 символа после trim']
  owner_id   varchar(36)  [not null, note: 'Zitadel sub']
  created_at timestamptz  [not null, default: `now()`]

  Indexes {
    owner_id [name: 'IX_guilds_owner_id']
  }
}

Table guild.channels {
  id         uuid        [pk, default: `uuidv7()`]
  guild_id   uuid        [not null, ref: > guild.guilds.id]
  name       varchar(32) [not null, note: 'мин. 1 символ после trim']
  type       varchar(20) [not null, default: 'text', note: 'enum: text|voice']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    guild_id [name: 'IX_channels_guild_id']
  }
}

Table guild.members {
  guild_id     uuid        [not null, ref: > guild.guilds.id]
  user_id      varchar(36) [not null, note: 'Zitadel sub']
  display_name varchar(255) [not null, note: 'snapshot из JWT claim name']
  username     varchar(254) [not null, note: 'snapshot из JWT claim preferred_username (RFC 5321 email max)']
  role         text        [not null, note: 'enum: member|admin|owner; DB default нет - значение всегда передается приложением']
  joined_at    timestamptz [not null, default: `now()`]

  Indexes {
    (guild_id, user_id) [pk, name: 'PK_members']
  }
}

Table guild.invites {
  id          uuid        [pk, default: `uuidv7()`]
  guild_id    uuid        [not null, ref: > guild.guilds.id]
  code        varchar(20) [not null, note: 'мин. 6 символов, [a-zA-Z0-9]']
  created_by  varchar(36) [not null, note: 'Zitadel sub']
  expires_at  timestamptz [null, note: 'NULL = бессрочно']
  max_uses    integer     [null, note: 'NULL = без лимита, > 0']
  uses_count  integer     [not null, default: 0]
  created_at  timestamptz [not null, default: `now()`]

  Indexes {
    code     [unique, name: 'IX_invites_code']
    guild_id [name: 'IX_invites_guild_id']
  }
}

Table guild.bans {
  guild_id   uuid        [not null, ref: > guild.guilds.id]
  user_id    varchar(36)  [not null, note: 'Zitadel sub забаненного']
  banned_by  varchar(36)  [not null, note: 'Zitadel sub модератора']
  reason     varchar(500) [null]
  banned_at  timestamptz [not null, default: `now()`]

  Indexes {
    (guild_id, user_id) [pk, name: 'PK_bans']
  }
}

// ─── Schema: messaging ────────────────────────────────────────────────────

Table messaging.messages {
  id          uuid          [pk, default: `uuidv7()`]
  channel_id  uuid          [not null, note: 'soft-FK guild.channels.id']
  guild_id    uuid          [not null, note: 'soft-FK guild.guilds.id']
  author_id   varchar(36)   [not null, note: 'Zitadel sub']
  author_name varchar(255)  [not null, note: 'snapshot из JWT claim name']
  content     varchar(4000) [not null, note: 'мин. 1 символ после trim']
  created_at  timestamptz   [not null, default: `now()`]

  Indexes {
    (channel_id, created_at) [name: 'IX_messages_channel_id_created_at']
  }
}

Table messaging.outbox_events {
  id           uuid        [pk, default: `uuidv7()`]
  event_type   varchar(64) [not null, note: 'message.created|deleted|...']
  guild_id     uuid        [not null, note: 'soft-FK; broadcast routing']
  payload      text        [not null, note: 'JSON']
  published_at timestamptz [null, note: 'soft lock; NOT NULL = in-flight или завис']
  processed_at timestamptz [null, note: 'NULL = не обработано, NOT NULL = доставлено']
  created_at   timestamptz [not null, default: `now()`]

  Indexes {
    (published_at, created_at) [name: 'IX_outbox_events_pending', note: 'partial WHERE processed_at IS NULL']
  }
}

Table messaging.idempotency_keys {
  key        varchar(128) [pk, note: 'X-Idempotency-Key UUID']
  response   text         [not null, note: 'cached body']
  created_at timestamptz  [not null, default: `now()`]
  expires_at timestamptz  [not null, note: 'TTL 24h']
}

// ─── Soft-связи ───────────────────────────────────────────────────────────

Ref soft_messages_channel: messaging.messages.channel_id > guild.channels.id
Ref soft_messages_guild:   messaging.messages.guild_id   > guild.guilds.id
Ref soft_outbox_guild:     messaging.outbox_events.guild_id > guild.guilds.id

TableGroup guild {
  guild.guilds
  guild.channels
  guild.members
  guild.invites
  guild.bans
}

TableGroup messaging {
  messaging.messages
  messaging.outbox_events
  messaging.idempotency_keys
}